fix: non english text wrapping issues

--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -11,6 +11,7 @@
 .goodbye {
   font-size: 2rem;
   text-align: center;
+  overflow-wrap: anywhere;
 }
 
 .tag {
